# BEEhaviourLab

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst  tracking.rst
src/BEEhaviourLab/: __init__.py  cli.py
src/BEEhaviourLab/config/: load_config.py  tracking_config.yaml
src/BEEhaviourLab/tracking/: __init__.py  fix_ids.py  process_video.py  speed_direction_analysis.py  tracking_video_visualiser.py  yolo_predict_to_file.py
src/beehaviourlab/: cli.py
src/beehaviourlab/config/: load_config.py
src/beehaviourlab/tracking/: __init__.py
tests/: test_cli.py  test_extract_flow_info.py  test_fix_ids.py  test_process_video.py  test_speed_direction_analysis.py
